--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "@testing-library/user-event": "12.6.2",
     "chalk": "4.1.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-cookie": "7.2.0",
+    "react-dom": "17.0.1",
+    "react-router-dom": "6.26.2",
+    "uuid": "10.0.0",
+    "uuidv4": "6.2.13"
   },
   "devDependencies": {
     "eslint-config-airbnb": "18.2.1",
